kubernetes/clusters/production/overlays/gateway/gateway-public.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: gateway
spec:
  gatewayClassName: cilium-public-nodeport
  listeners:
    - protocol: HTTP
      port: 80
      name: http-gateway
      hostname: "*.petebeegle.com"
      allowedRoutes:
        namespaces:
          from: All
